renames conjugate.shl to wordy.shl

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@
 # Makefile --build rules for midden's test directory
 #
 
-SH_SRC = test-conjugate.sh test-getopt.sh test-unit.sh
+SH_SRC = test-getopt.sh test-unit.sh test-wordy.sh
 language = sh
 
 include devkit.mk test/tap.mk
