--- a/test/Makefile
+++ b/test/Makefile
@@ -5,6 +5,6 @@
 SH_SRC = test-getopt.sh test-unit.sh test-wordy.sh
 language = sh
 
-include devkit.mk test/tap.mk
+include makeshift.mk test/tap.mk
 
 test-tap: $(SH_TRG)
